# ScoreBoard

./: .env  Cargo.toml  README.md  index.html
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20250302213940_students.sql  20250302213946_classes.sql  20250302213954_assignments.sql  20250302213959_grades.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: crud.rs
src-tauri/src/database/: db.rs  models.rs
