[package]
name = "scoreboard-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "scoreboard_ui"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7.7", features = ["csr", "nightly"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
thaw = { version = "0.4.3", features = ["csr", "nightly"] }

[workspace]
members = ["src-tauri"]
