[package]
name = "scoreboard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[lib]
name = "scoreboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
tauri-plugin-fs = "2"
anyhow = "1.0.96"
chrono = { version = "0.4.40", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }

